Fix layout issues in Smart Indices docs

--- a/src/sass/pages/trading/pages.scss
+++ b/src/sass/pages/trading/pages.scss
@@ -544,7 +544,7 @@ div#price_table_notes {
 
 .smart-indices-content {
     img {
-        height: 10rem;
+        height: 5rem;
     }
 }
 
